k8's/7.mysql_deployment.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mysql-statefulset
  namespace: project-2
spec:
  serviceName: mysqldb-notes
  selector:
    matchLabels:
      app: notes-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: notes-mysql
    spec:
      containers:
        - name: mysql-container
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: project-2-mysql-pvc
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
        - metadata:
            name: project-2-mysql-pvc
            namespace: project-2
          spec:
            accessModes: ["ReadWriteOnce"]
            resources:
              requests:
                storage: 2Gi
